openshift/deploy-with-oauth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
  labels:
    application: kube-ops-view
    component: frontend
  name: proxy
spec:
  selector:
    application: kube-ops-view
    component: frontend
  type: ClusterIP
  ports:
  - name: proxy
    port: 8443
    targetPort: 8443
