openshift/deploy-with-oauth-proxy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: proxy
spec:
  host: ocp-ops-view.apps.<cluster.domain>
  port:
    targetPort: proxy
  to:
    kind: Service
    name: proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
